test/org/midica/testfiles/failing/eff-flow-broken-by-call.midica
INCLUDE inc/instruments.midica


0: vol.wait()
CALL func
0: .set(50)

FUNCTION func
END